--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #cabecalhoPrincipal h1, #cabecalhoPrincipal nav{
     text-align: center;
     background-color: rgb(80,197,155);
@@ -5,7 +9,7 @@
     color: white;
 
 }
-
+ 
 #cabecalhoPrincipal nav{
     text-align: center;
     background-color: rgb(80,197,155);
@@ -16,30 +20,62 @@
     padding-bottom: 1em;
 }
 
-
 #cabecalhoPrincipal a{
     text-decoration: none;
     color: white;
-    background-color: rgb(95, 140, 224);    
+    background-color: rgb(65, 135, 198);    
     padding-top: 4px;
     padding-bottom: 4px;
-    padding-right: 16px;
-    padding-left: 16px;
+    padding-right: 26px;
+    padding-left: 26px;
 
-}
-
-#p{
-    
-    margin: 0;
-    padding-top: 1ex;
-    padding-left: 1em;
-    background-color: rgb(240, 240, 240);
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    font-weight: 600;
-    
 }
 
 body, #cabecalhoPrincipal h1{
     margin: 0;
 }
+
+#cabecalhoPrincipal nav a{
+    width: 50px;
+}
+
+section#main{
+    background-color: rgb(230, 230, 230);
+    padding-bottom: 5%;
+    overflow: hidden;
+}
+
+section#main h1{
+    margin-left: 10px;
+    padding-left: 3%;
+}
+
+section#main article{
+    padding-right: 3%;
+    padding-left: 3%;
+    border-left: rgb(230, 230, 230) solid 10px;
+    border-right: rgb(230, 230, 230) solid 10px;
+    display: inline-block;
+    width: 33.33%;
+
+    float: left;
+    box-sizing: border-box;
+}
+
+section#main a{
+    display: flex;
+    justify-content: center;
+}
+
+section#main h2{
+    font-weight: 700;
+    font-size: larger;
+    text-align: center;
+}
+
+section#main p{
+    text-align: justify;
+    
+}
+
+
